[tool.poetry]
name = "corpus-explorer"
version = "0.1.0"
description = ""
authors = ["Hugo Mailhot <mailhot.hugo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8"
pandas = "^0.25.3"
pyarrow = "^0.15.1"
pytest = "^5.2"

[tool.poetry.dev-dependencies]
ipython = "^7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
