[tool.poetry]
name = "corpus-explorer"
version = "0.1.0"
description = ""
authors = ["Hugo Mailhot <mailhot.hugo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8"
pandas = "^0.25.3"
pyarrow = "^0.15.1"
pytest = "^5.2"
scikit-learn = "^0.21.3"
plotly = "^4.3"
ipykernel = "^5.1"
notebook = "^6.0"
ipywidgets = "^7.5"
numpy = "^1.17"
scipy = "^1.3"
dash = "^1.7"

[tool.poetry.dev-dependencies]
ipython = "^7.9"
flake8 = "^3.7"
flake8-colors = "^0.1.6"
flake8-commas = "^2.0"
flake8-isort = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
